--- a/scss/_ie.scss
+++ b/scss/_ie.scss
@@ -2,7 +2,7 @@
 .ie-body {
     height: 1000px;
     background-image: url(../images/ie/bg-ie.jpg);
-    background-position: top center;
+    background-position: center top;
     background-size: 100%;
     background-repeat: no-repeat;
     padding: 50px 0 0 50px;
@@ -30,7 +30,7 @@
         height: 100vh;
         padding: 0;
         background-image: url(../images/ie/bg-ie.jpg);
-        background-position: top center;
+        background-position: center top;
         background-size: cover;
         position: relative;
     
