--- a/css/style.css
+++ b/css/style.css
@@ -557,17 +557,22 @@ body > i.aminate {
 }
 
 .plane-block--rotate {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  -webkit-transform: rotate(90deg) translateX(-50%);
+          transform: rotate(90deg) translateX(-50%);
 }
 
 .plane-block--reverse {
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg) translateX(50%);
+          transform: rotate(-90deg) translateX(50%);
 }
 
 .plane-block--finish {
   display: none;
+}
+
+.plane-block--start {
+  -webkit-transform: translateY(-300%);
+          transform: translateY(-300%);
 }
 
 .plane {
@@ -1178,8 +1183,8 @@ body > i.aminate {
   left: 0;
   -webkit-animation: none;
           animation: none;
-  -webkit-transform: translateX(-200%);
-          transform: translateX(-200%);
+  -webkit-transform: translateX(-250%);
+          transform: translateX(-250%);
   -webkit-transition-duration: 1s;
           transition-duration: 1s;
 }
@@ -1459,6 +1464,13 @@ body > i.aminate {
 @media screen and (max-width: 767px) {
   .modal .body {
     padding: 0;
+    height: calc(100vh - 80px);
+  }
+}
+
+@media screen and (max-height: 575px) {
+  .modal .body {
+    margin-top: 0;
   }
 }
 
@@ -1510,7 +1522,7 @@ body > i.aminate {
   background-image: url(../images/quests/questFinish_data46.jpg);
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 767px) {
   .modal .body--station {
     background-image: none;
     border: none;
@@ -1524,6 +1536,12 @@ body > i.aminate {
   background-image: url(../images/bg/start.jpg);
   background-position: center;
   background-size: cover;
+}
+
+@media screen and (max-height: 575px) {
+  .modal .start {
+    padding-top: 20px;
+  }
 }
 
 .modal .start h1 {
@@ -1617,7 +1635,7 @@ body > i.aminate {
   }
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 767px) {
   .modal .start__link {
     margin-bottom: 10px;
   }
@@ -1676,7 +1694,7 @@ body > i.aminate {
   }
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 767px) {
   .modal .start__btn {
     font-size: 24px;
   }
@@ -1699,7 +1717,14 @@ body > i.aminate {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin-top: 50px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (max-height: 575px) {
+  .start-grid {
+    margin-top: 20px;
+    margin-bottom: 0px;
   }
 }
 
@@ -1726,7 +1751,7 @@ body > i.aminate {
     width: 50%;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
 }
 
@@ -1740,10 +1765,10 @@ body > i.aminate {
   margin: 0 0 20px 0;
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 767px) {
   .start-grid h2, .start-grid label {
     font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 }
 
@@ -1782,7 +1807,7 @@ body > i.aminate {
   position: relative;
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 767px) {
   .start-carousel {
     width: 80px;
   }
@@ -1849,6 +1874,14 @@ body > i.aminate {
           transform: translateY(-150%);
   -webkit-animation: panelShow 1s linear 2s forwards;
           animation: panelShow 1s linear 2s forwards;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+@media screen and (max-height: 575px) {
+  .panel-block {
+    height: 100%;
+  }
 }
 
 .panel-block__col {
@@ -1861,6 +1894,8 @@ body > i.aminate {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .panel-block__col--photo {
@@ -1879,11 +1914,19 @@ body > i.aminate {
   border-bottom-left-radius: 20px;
   margin: -10px 0 20px 0;
   padding: 10px 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 @media screen and (max-width: 991px) {
   .panel {
     padding: 10px;
+  }
+}
+
+@media screen and (max-height: 575px) {
+  .panel {
+    max-height: 85%;
   }
 }
 
@@ -1907,6 +1950,8 @@ body > i.aminate {
   border: 5px ridge #c8b678;
   border-top-right-radius: 50px;
   border-bottom-left-radius: 50px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .panel__photo--show {
@@ -1957,7 +2002,14 @@ body > i.aminate {
 
 @media screen and (max-width: 767px) {
   .panel__text {
+    max-height: 500px;
     margin: 20px 0;
+  }
+}
+
+@media screen and (max-height: 575px) {
+  .panel__text {
+    max-height: inherit;
   }
 }
 
@@ -2120,8 +2172,14 @@ body > i.aminate {
 }
 
 .panel-carousel__block {
-  padding-left: 25px;
+  padding-left: 20px;
   outline: none;
+}
+
+@media screen and (max-height: 575px) {
+  .panel-carousel__block {
+    max-height: 278px;
+  }
 }
 
 .panel-carousel .slick-slide {
@@ -2185,6 +2243,15 @@ body > i.aminate {
 @media screen and (max-width: 991px) {
   .station-block {
     max-width: 450px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .station-block {
+    max-width: 100%;
+    height: 100%;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
   }
 }
 
