--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,6 @@ h1, h2 {
 
 body {
   overflow: hidden;
-  overflow-x: hidden !important;
 }
 
 body > i {
@@ -169,6 +168,16 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-width: 479px) {
+  .menu__block--pos {
+    display: none;
+  }
+  .menu__block--pos > span {
+    display: block;
+    margin-top: 15px;
+  }
+}
+
 .menu__block--avatar {
   padding: 0 15px;
 }
@@ -182,6 +191,12 @@ body > i.aminate {
 @media screen and (max-width: 575px) {
   .menu__block--avatar {
     padding: 0 2px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .menu__block--avatar {
+    display: none;
   }
 }
 
@@ -371,6 +386,12 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-width: 479px) {
+  .step--admin {
+    width: 75px;
+  }
+}
+
 .step--admin:disabled {
   border-color: red;
 }
@@ -556,6 +577,13 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-width: 479px) {
+  .plane-block {
+    width: 45px;
+    height: 45px;
+  }
+}
+
 .plane-block--rotate {
   -webkit-transform: rotate(90deg) translateX(-50%);
           transform: rotate(90deg) translateX(-50%);
@@ -684,6 +712,16 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-width: 479px) {
+  .space-ship-1,
+  .space-ship-2,
+  .space-ship-3,
+  .space-ship-4 {
+    width: 45px;
+    height: 45px;
+  }
+}
+
 .space-ship-1 {
   background-image: url(../images/ships/ship01.png);
 }
@@ -792,6 +830,12 @@ body > i.aminate {
   background-image: url(../images/bg/galaxy-finish.jpg);
 }
 
+@media screen and (max-width: 479px) {
+  .galaxy--bg-finish {
+    background-position: 25%;
+  }
+}
+
 .galaxy--bg-5 {
   background-image: url(../images/bg/galaxy05.jpg);
 }
@@ -817,7 +861,7 @@ body > i.aminate {
   -webkit-box-shadow: 0 100px 85px -25px #000 inset;
           box-shadow: 0 100px 85px -25px #000 inset;
   background-size: auto;
-  background-position: 0 0;
+  background-position: 25%;
 }
 
 .fild-row {
@@ -882,6 +926,13 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-width: 479px) {
+  .planet-block {
+    width: 70px;
+    height: 70px;
+  }
+}
+
 .planet-block[data-score='1'] .planet {
   background-image: url(../images/map/data01.jpg);
   -webkit-transform: scale(0.4);
@@ -941,6 +992,13 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-width: 479px) {
+  .planet-block[data-score='5'] .planet {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .planet-block[data-score='5'] .planet::after {
   content: "";
   position: absolute;
@@ -980,6 +1038,13 @@ body > i.aminate {
   .planet-block[data-score='5'] .planet::after {
     width: 30px;
     height: 30px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .planet-block[data-score='5'] .planet::after {
+    width: 20px;
+    height: 20px;
   }
 }
 
@@ -1304,6 +1369,12 @@ body > i.aminate {
           animation: asteroidRotate 10s linear infinite;
 }
 
+@media screen and (max-width: 767px) {
+  .planet-block[data-score='35'] .planet {
+    margin: 20px;
+  }
+}
+
 .planet-block[data-score='36'] .planet {
   background-image: url(../images/map/data36.jpg);
   -webkit-transform: scale(0.5);
@@ -1470,6 +1541,7 @@ body > i.aminate {
 
 @media screen and (max-height: 575px) {
   .modal .body {
+    padding: 0;
     margin-top: 0;
   }
 }
@@ -1576,7 +1648,15 @@ body > i.aminate {
 
 @media screen and (max-width: 575px) {
   .modal .start h1 {
-    font-size: 24px;
+    font-size: 25px;
+    padding-right: 60px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .modal .start h1 {
+    font-size: 14px;
+    padding-right: 40px;
   }
 }
 
@@ -1616,6 +1696,13 @@ body > i.aminate {
   .modal .start h1::after {
     width: 40px;
     height: 40px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .modal .start h1::after {
+    width: 30px;
+    height: 30px;
   }
 }
 
@@ -1700,6 +1787,13 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 479px) {
+  .modal .start__btn {
+    font-size: 20px;
+    padding: 15px 20px;
+  }
+}
+
 .modal .start__btn:focus, .modal .start__btn:hover {
   -webkit-box-shadow: 0 0 10px #adabac inset;
           box-shadow: 0 0 10px #adabac inset;
@@ -1721,7 +1815,7 @@ body > i.aminate {
   }
 }
 
-@media screen and (max-height: 575px) {
+@media screen and (max-height: 479px) {
   .start-grid {
     margin-top: 20px;
     margin-bottom: 0px;
@@ -1755,6 +1849,33 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 575px) {
+  .start-grid__block {
+    width: 33.333333%;
+    padding: 0 15px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .start-grid__block {
+    width: 100%;
+    padding: 0;
+  }
+  .start-grid__block:first-child {
+    display: none;
+  }
+}
+
+@media screen and (max-height: 479px) {
+  .start-grid__block {
+    width: 50%;
+    padding: 0;
+  }
+  .start-grid__block:first-child {
+    display: none;
+  }
+}
+
 .start-grid h2, .start-grid label {
   font-size: 20px;
   color: #fff;
@@ -1769,6 +1890,18 @@ body > i.aminate {
   .start-grid h2, .start-grid label {
     font-size: 18px;
     margin-bottom: 5px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .start-grid h2, .start-grid label {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-height: 479px) {
+  .start-grid h2, .start-grid label {
+    font-size: 14px;
   }
 }
 
@@ -1810,6 +1943,12 @@ body > i.aminate {
 @media screen and (max-width: 767px) {
   .start-carousel {
     width: 80px;
+  }
+}
+
+@media screen and (max-height: 479px) {
+  .start-carousel {
+    width: 70px;
   }
 }
 
@@ -1884,6 +2023,12 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 479px) {
+  .panel-block {
+    border-width: 5px;
+  }
+}
+
 .panel-block__col {
   width: 60%;
   padding: 10px;
@@ -1898,11 +2043,41 @@ body > i.aminate {
           box-sizing: border-box;
 }
 
+@media screen and (max-width: 575px) {
+  .panel-block__col {
+    padding: 10px 5px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .panel-block__col {
+    width: 100%;
+  }
+}
+
+@media screen and (max-height: 479px) {
+  .panel-block__col {
+    width: 70%;
+  }
+}
+
 .panel-block__col--photo {
   width: 40%;
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
+}
+
+@media screen and (max-width: 479px) {
+  .panel-block__col--photo {
+    display: none;
+  }
+}
+
+@media screen and (max-height: 479px) {
+  .panel-block__col--photo {
+    width: 30%;
+  }
 }
 
 .panel {
@@ -1930,6 +2105,14 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 479px) {
+  .panel {
+    max-height: 82%;
+    overflow-y: auto;
+    margin-bottom: 10px;
+  }
+}
+
 .panel--down {
   border: 5px ridge #adabac;
   border-bottom: none;
@@ -1938,6 +2121,12 @@ body > i.aminate {
   border-top-left-radius: 20px;
   margin-top: auto;
   margin-bottom: -10px;
+}
+
+@media screen and (max-height: 479px) {
+  .panel--down {
+    padding: 5px;
+  }
 }
 
 .panel--border {
@@ -1995,7 +2184,6 @@ body > i.aminate {
 
 .panel__text {
   max-height: 400px;
-  padding-right: 10px;
   overflow-y: auto;
   margin: 40px 0;
 }
@@ -2007,9 +2195,9 @@ body > i.aminate {
   }
 }
 
-@media screen and (max-height: 575px) {
+@media screen and (max-height: 479px) {
   .panel__text {
-    max-height: inherit;
+    margin: 10px 0;
   }
 }
 
@@ -2029,7 +2217,15 @@ body > i.aminate {
   }
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 479px) {
+  .panel__text p, .panel__text a, .panel__text pre {
+    font-size: 12px;
+    line-height: 18px;
+    margin-bottom: 5px;
+  }
+}
+
+@media screen and (max-height: 479px) {
   .panel__text p, .panel__text a, .panel__text pre {
     font-size: 12px;
     line-height: 18px;
@@ -2171,14 +2367,33 @@ body > i.aminate {
   padding-bottom: 20px;
 }
 
+@media screen and (max-height: 479px) {
+  .panel-carousel {
+    height: 85%;
+  }
+}
+
 .panel-carousel__block {
   padding-left: 20px;
   outline: none;
+  overflow-y: auto;
+}
+
+@media screen and (max-width: 575px) {
+  .panel-carousel__block {
+    padding-left: 15px;
+  }
 }
 
 @media screen and (max-height: 575px) {
   .panel-carousel__block {
     max-height: 278px;
+  }
+}
+
+@media screen and (max-height: 479px) {
+  .panel-carousel__block {
+    max-height: 135px;
   }
 }
 
@@ -2259,6 +2474,12 @@ body > i.aminate {
   margin: 20px 0;
 }
 
+@media screen and (max-height: 479px) {
+  .quest-form {
+    margin: 10px 0;
+  }
+}
+
 .quest-form--hidden {
   display: none;
 }
@@ -2274,6 +2495,12 @@ body > i.aminate {
 @media screen and (max-width: 767px) {
   .quest-form label {
     font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .quest-form label {
+    font-size: 12px;
   }
 }
 
@@ -2309,6 +2536,18 @@ body > i.aminate {
     padding: 20px;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .mainer {
+    padding: 0;
+  }
+}
+
+@media screen and (max-height: 575px) {
+  .mainer {
+    padding: 0;
   }
 }
 
@@ -2349,6 +2588,12 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 575px) {
+  .aside-menu {
+    height: 80px;
+  }
+}
+
 .aside-menu .slick-dots {
   list-style-type: none;
   padding: 0;
@@ -2376,6 +2621,12 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 575px) {
+  .aside-menu .slick-dots {
+    max-width: 100%;
+  }
+}
+
 .aside-menu .slick-dots li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2399,6 +2650,18 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 575px) {
+  .aside-menu .slick-dots li {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-right: 20px;
+  }
+  .aside-menu .slick-dots li:last-child {
+    margin-right: 0;
+  }
+}
+
 .aside-menu .slick-dots li::before {
   content: "";
   display: inline-block;
@@ -2415,7 +2678,18 @@ body > i.aminate {
   .aside-menu .slick-dots li::before {
     width: 20px;
     height: 20px;
-    margin-right: 10px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .aside-menu .slick-dots li::before {
+    margin-right: 7px;
+  }
+}
+
+@media screen and (max-height: 479px) {
+  .aside-menu .slick-dots li::before {
+    margin-right: 5px;
   }
 }
 
@@ -2442,6 +2716,12 @@ body > i.aminate {
 @media screen and (max-width: 991px) {
   .aside-menu .slick-dots li button {
     font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .aside-menu .slick-dots li button {
+    font-size: 16px;
   }
 }
 
@@ -2480,6 +2760,18 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 575px) {
+  .main {
+    height: calc(100vh - 90px);
+  }
+}
+
+@media screen and (max-height: 479px) {
+  .main {
+    padding: 10px;
+  }
+}
+
 .main-carousel .slick-slide {
   float: left;
 }
@@ -2500,6 +2792,12 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 575px) {
+  .main-carousel .article {
+    height: calc(100vh - 140px);
+  }
+}
+
 .main-carousel .article__caption {
   font-size: 24px;
   font-weight: 700;
@@ -2514,6 +2812,13 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-height: 479px) {
+  .main-carousel .article__caption {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+}
+
 .main-carousel .article__text {
   padding: 30px 0;
   border-top: 1px dashed #99a18c;
@@ -2525,6 +2830,13 @@ body > i.aminate {
   .main-carousel .article__text {
     padding: 20px 0;
     margin: 0 0 20px 0;
+  }
+}
+
+@media screen and (max-height: 479px) {
+  .main-carousel .article__text {
+    padding: 10px 0;
+    margin-bottom: 10px;
   }
 }
 
@@ -2588,6 +2900,12 @@ body > i.aminate {
 
 .map .gmnoprint {
   display: none;
+}
+
+@media screen and (max-height: 479px) {
+  .map {
+    height: 200px;
+  }
 }
 
 .infowindow {
