--- a/css/style.css
+++ b/css/style.css
@@ -603,6 +603,20 @@ body > i.aminate {
           transform: translateY(-300%);
 }
 
+@media screen and (max-width: 575px) {
+  .plane-block--start {
+    -webkit-transform: translateY(-700%);
+            transform: translateY(-700%);
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .plane-block--start {
+    -webkit-transform: translateY(-800%);
+            transform: translateY(-800%);
+  }
+}
+
 .plane {
   width: 100%;
   height: 100%;
@@ -988,6 +1002,12 @@ body > i.aminate {
           box-sizing: border-box;
   text-align: center;
   position: relative;
+}
+
+@media screen and (max-width: 575px) {
+  .sector {
+    height: 300px;
+  }
 }
 
 .sector.start, .sector.finish {
